name check updated
