# service/DIMNUMConstraintsService.js
@@ -17,10 +17,10 @@ exports.getDimConstraints = function() {
   return new Promise(function(resolve, reject) {
       jsonfile.readFile(appRoot + fileDim, function (err, obj) {
           if (err) console.error(err);
-          if (Object.keys(obj).length > 0) {
-              resolve(obj[Object.keys(obj)[0]]);
+          if (obj.length > 0) {
+              resolve(obj);
           } else {
-              resolve();
+              resolve([]);
           }
       });
   });
@@ -35,11 +35,12 @@ exports.getDimConstraints = function() {
 exports.getNumConstraints = function() {
   return new Promise(function(resolve, reject) {
       jsonfile.readFile(appRoot + fileNum, function (err, obj) {
+          console.log(obj);
           if (err) console.error(err);
-          if (Object.keys(obj).length > 0) {
-              resolve(obj[Object.keys(obj)[0]]);
+          if (obj.length > 0) {
+              resolve(obj);
           } else {
-              resolve();
+              resolve([]);
           }
       });
   });
@@ -68,40 +69,65 @@ exports.getTemplateDimConstraints = function(scenarioTemplateCd) {
 }
 
 /**
+ * Returns list of NUM constraints for particular template
+ *
+ * scenarioTemplateCd String Scenario template code for DIM constraints receiving
+ * returns constraints
+ **/
+exports.getTemplateNumConstraints = function(scenarioTemplateCd) {
+    return new Promise(function(resolve, reject) {
+        jsonfile.readFile(appRoot + fileScenarioTemplate, function (err, obj) {
+            const template = obj.items.find(item => item.SCENARIO_TEMPLATE_CD === scenarioTemplateCd);
+            const constraints = template.SCT_CONSTRAINT_NUM_PARAMS;
+            if (err) console.error(err);
+            if (Object.keys(constraints).length > 0) {
+                resolve(constraints);
+            } else {
+                resolve();
+            }
+        });
+    });
+}
+
+/**
  * Returns constraints for particular user scenario
  *
  * userScenarioCd String user scenario code
  * returns userScenarioConstraints
  **/
 exports.getScenarioConstraints = function(attrlist, userScenarioCd) {
-    console.log(userScenarioCd);
-    return new Promise(function(resolve, reject) {
-        jsonfile.readFile(appRoot + fileScenarioConstraint, function (err, obj) {
-            const attrNamesList = attrlist.split(',');
-            const constraint = obj.constraints.filter(item => item.SCENARIO_CD === userScenarioCd);
+    if (!attrlist.length) {
+        return new Promise(function(resolve, reject) {
+        });
+    } else {
+        return new Promise(function(resolve, reject) {
+            jsonfile.readFile(appRoot + fileScenarioConstraint, function (err, obj) {
+                const attrNamesList = attrlist.split(',');
+                const constraint = obj.constraints.filter(item => item.SCENARIO_CD === userScenarioCd);
 
-            jsonfile.readFile(appRoot + fileConstraintBundleItems, function (err, obj) {
-                if (err) console.error(err);
-                let result = constraint.map(cons => {
-                    const bundles = obj.bundles.filter(bundle => bundle.CONSTRAINT_BUNDLE_CD === cons.CONSTRAINT_BUNDLE_CD);
-                    const bundlesAttrsNames = bundles.map(bundle => bundle.ATTR_NAME);
+                jsonfile.readFile(appRoot + fileConstraintBundleItems, function (err, obj) {
+                    if (err) console.error(err);
+                    let result = constraint.map(cons => {
+                        const bundles = obj.bundles.filter(bundle => bundle.CONSTRAINT_BUNDLE_CD === cons.CONSTRAINT_BUNDLE_CD);
+                        const bundlesAttrsNames = bundles.map(bundle => bundle.ATTR_NAME);
 
-                    if (bundlesAttrsNames.sort().toString() === attrNamesList.sort().toString()) {
-                        return {...cons, CONSTRAINT_BUNDLE_ITEMS: [...bundles]}
+                        if (bundlesAttrsNames.sort().toString() === attrNamesList.sort().toString()) {
+                            return {...cons, CONSTRAINT_BUNDLE_ITEMS: [...bundles]}
+                        } else {
+                            console.log(false);
+                        }
+                    });
+
+                    result = result.filter(item => item);
+                    if (result.length > 0) {
+                        resolve(result);
                     } else {
-                        console.log(false);
+                        resolve([]);
                     }
                 });
-
-                result = result.filter(item => item);
-                if (result.length > 0) {
-                    resolve(result);
-                } else {
-                    resolve([]);
-                }
             });
         });
-    });
+    }
 }
 
 
